fix(ui5-search-item): action slot visibility (#12694)

--- a/packages/fiori/src/themes/SearchItem.css
+++ b/packages/fiori/src/themes/SearchItem.css
@@ -34,18 +34,10 @@
 	display: none;
 }
 
-:host([desktop]) .ui5-search-item-actions {
-	display: none;
-}
-
 :host(:hover),
 :host(:focus-within) {
 	.ui5-search-item-selected-delete {
 		display: inline-block;
-	}
-	
-	.ui5-search-item-actions {
-		display: flex;
 	}
 }
 
